css/index.css
html,
body {
    height: 100%;
    width: 100%;
    overflow-x: auto;
}

.border {
    width: 100%;
    min-width: 500px;
    min-height: 100%;
    overflow-x: hidden;
    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
}

/* header */
.header {
    padding: 10px;
    text-align: center;
}

.header span {
    font-family: 'Lucida Handwriting';
    font-size: 3em;
    font-weight: bold;
}

.header span img {
    height: 1.7em;
    vertical-align: middle;
    margin: 0 5px;
}

/* marquee */
.banner {
    margin: 5px 0;
}

/* tool bar */
.tools-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 10px;
}

.tools-wrapper .tools {
    display: flex;
    flex-direction: row;
    justify-content: center;
    justify-self: start;
}

.tools-wrapper .tools .tool {
    align-self: center;
    display: flex;
    flex-direction: row;
    margin: 5px;
}

.tools-wrapper .tools .tool>div {
    margin: 0 5px;
    align-self: center;
}

.tools-wrapper .flip-wrapper {
    align-self: center;
    margin-left: 10px;
}

/* code panel */
.wrapper {
    --panel-min-height: 400px;
    --panel-max-height: 600px;
    --panel-border-radius: 10px;
    --code-font-size: 14px;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    width: 95%;
    margin: 10px auto;
}

.wrapper .panel {
    position: relative;
    width: 50%;
    align-self: flex-start;
    min-height: var(--panel-min-height);
    max-height: var(--panel-max-height);
    flex-grow: 0;
    overflow: hidden;
    overflow-y: overlay;
}

.wrapper .action-wrapper {
    --animate-duration: 1s;
    display: flex;
    flex-direction: column;
    align-self: center;
}

.action-wrapper .action {
    width: 50px;
    height: 50px;
    display: flex;
    justify-content: center;
    border-radius: 50%;
    align-self: center;
    cursor: pointer;
    transition: 0.3s;
}

.action-wrapper .action:hover {
    opacity: 80%;
    transform: scale(1.1);
}

.action-wrapper .action i {
    align-self: center;
    font-size: 30px;
}

.wrapper .action-wrapper .animate__spin i {
    animation: spin 0.5s ease 0s forwards;
}

@keyframes spin {
    0% {
        -webkit-transform: rotate(0);
        transform: rotate(0);
    }

    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
    }
}

.wrapper .action-wrapper .animate__grow i {
    animation: grow 0.5s ease 0s forwards;
}

@keyframes grow {
    0% {
        -webkit-transform: scale(1.0);
        transform: scale(1.0);
    }

    20% {
        -webkit-transform: scale(0.8);
        transform: scale(0.8);
    }

    60% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1.0);
        transform: scale(1.0);
    }
}

.wrapper .action-wrapper .animate__shake i {
    animation: shake 0.5s ease 0s forwards;
}

@keyframes shake {

    0%,
    to {
        -webkit-transform: translateZ(0);
        transform: translateZ(0)
    }

    20%,
    60% {
        -webkit-transform: translate3d(-5px, 0, 0);
        transform: translate3d(-5px, 0, 0)
    }


    40%,
    80% {
        -webkit-transform: translate3d(5px, 0, 0);
        transform: translate3d(5px, 0, 0)
    }
}

.wrapper .action-wrapper .animate__rubber i {
    animation: rubber 0.5s ease 0s forwards;
}

@keyframes rubber {
    0% {
        -webkit-transform: scaleX(1);
        transform: scaleX(1)
    }

    30% {
        -webkit-transform: scale3d(1.25, .75, 1);
        transform: scale3d(1.25, .75, 1)
    }

    40% {
        -webkit-transform: scale3d(.75, 1.25, 1);
        transform: scale3d(.75, 1.25, 1)
    }

    50% {
        -webkit-transform: scale3d(1.15, .85, 1);
        transform: scale3d(1.15, .85, 1)
    }

    65% {
        -webkit-transform: scale3d(.95, 1.05, 1);
        transform: scale3d(.95, 1.05, 1)
    }

    75% {
        -webkit-transform: scale3d(1.05, .95, 1);
        transform: scale3d(1.05, .95, 1)
    }

    to {
        -webkit-transform: scale(1);
        transform: scale(1)
    }
}

/* input text area */
.wrapper .panel {
    min-height: var(--panel-min-height);
}

.wrapper .panel .code {
    box-sizing: border-box;
    width: 100%;
    min-height: var(--panel-min-height);
    max-height: var(--panel-max-height);
    border-radius: var(--panel-border-radius);
    overflow: hidden;
}

#source {
    box-sizing: border-box;
    width: 100%;
    resize: none;
    border: none;
    padding: 5px;
    font-size: var(--code-font-size);
    border-radius: var(--panel-border-radius);
    z-index: 5;
}

#source:focus {
    box-shadow: 0px 0px 6px 0px inset rgba(10, 37, 64, 0.35);
}

.panel .cover {
    --animate-duration: 0.3s;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    min-height: var(--panel-min-height);
    border-radius: var(--panel-border-radius);
    background-image: linear-gradient(45deg, #a8edea 0%, #fed6e3 100%);
    z-index: 5;
    text-align: center;
    overflow: auto;
    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1) inset;
}

.panel .cover p {
    align-self: center;
    width: 90%;
    margin: auto;
}

/* footer */
.footer {
    width: 100%;
    text-align: center;
}

.footer .badge-wrapper {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 10px auto;
}

.footer .badge-wrapper .badge {
    margin: 0 5px;
}

.footer .copyright {
    display: inline-block;
    margin: auto;
    margin-bottom: 20px;
    text-align: center;
    font-family: 'Lucida Handwriting';
}

.footer .copyright:hover {
    text-decoration: underline;
}

@media screen and (max-width: 950px) {
    .tools-wrapper .tools {
        flex-direction: column;
        justify-content: flex-start;
    }

    .tools-wrapper .tools .tool {
        align-self: flex-start;
    }

    .tools-wrapper .tools .tool .prompt {
        width: 8em;
        text-align: right;
    }
}

@media screen and (max-width: 768px) {
    .wrapper {
        flex-direction: column;
    }

    .wrapper .panel {
        width: 100%;
    }

    .wrapper .action-wrapper {
        flex-direction: row;
    }

    .footer .badge-wrapper {
        flex-direction: column;
    }
}

/* doc */
.doc-wrapper {
    max-width: 1000px;
    margin: 20px auto;
}

.doc-chapter h1 {
    font-family: 'Lucida Handwriting';
}

.doc-wrapper .bubble {
    padding: 2px 8px;
    white-space: nowrap;
    /* it's a trick to make pill shape */
    border-radius: 100px;
}

.doc-wrapper .bubble:hover {
    color: #efefef;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
}

.doc-wrapper .doc-section {
    margin-top: 16px;
}

/* alertify */
.alertify-notifier .ajs-message {
    border-radius: 100px;
    text-align: center;
}

.alertify-notifier .ajs-message.ajs-success {
    background: rgba(92, 184, 17, 0.9);
}

.alertify-notifier .ajs-message.ajs-warning {
    background: rgba(255, 185, 15, 0.9);
}

.alertify-notifier .ajs-message.ajs-error {
    background: rgba(254, 26, 0, 0.9);
}

.alertify .ajs-dialog {
    border-radius: 20px;
    overflow: hidden;
}

.alertify .ajs-dialog .ajs-header {
    font-family: 'Lucida Handwriting';
    font-size: large;
}

.alertify .ajs-dialog .ajs-button {
    border-radius: 10px;
    background-color: #07C160;
    border: none;
    cursor: pointer;
    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.1);
    color: white;
    transition: 0.3s;
}

.alertify .ajs-dialog .ajs-button:hover {
    opacity: 0.9;
    box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.3);
}

.coffee {
    width: 80%;
    margin: auto;
    font-family: 'Lucida Handwriting';
}

.coffee img {
    width: 100%;
}

.notification {
    width: 80%;
    margin: auto;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* Prism */
/* Override default Prism theme */
pre {
    box-sizing: border-box !important;
    margin: 0 !important;
    max-height: var(--panel-max-height);
    overflow-x: hidden;
    overflow-y: auto;
    padding: 5px !important;
    min-height: 400px !important;
}

pre.line-numbers {
    padding-left: 50px !important;
}

pre code {
    display: block !important;
    box-sizing: border-box !important;
    border-radius: var(--panel-border-radius);
    font-size: var(--code-font-size) !important;
    width: 100% !important;
}

pre code .token {
    font-size: var(--code-font-size);
}

pre code table {
    font-family: inherit;
    border-collapse: collapse;
}

pre code table tr .lineno {
    text-align: right;
    padding-right: 5px;
    --color: #ccc;
    border-right: 0.5px solid var(--color);
}

pre code table tr .line {
    padding-left: 5px;
}

/* on copy overload */
.code.pre-copy>.code-toolbar>pre[class*=language-] {
    transition: background 1s;
}

.code.copy>.code-toolbar>pre[class*=language-] {
    background: transparent !important;
}

.expand {
    display: inline-block;
    padding: 5px 15px;
    background-color: #bbb;
    border-radius: 1000px;
    cursor: pointer;
    transition: 0.5s;
}

.expand.hidden {
    display: none;
}

.expand i {
    margin-left: 5px;
}

.expand:hover {
    background-color: #aaa;
    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.1);
    transform: scale(1.05);
}

.expand:active {
    background-color: #999;
}

#previous {
    transition: height 1s;
}

#previous.hidden {
    height: 0;
    overflow: hidden;
}

